# ai-quality

./: .gitignore  aq.sh  pyproject.toml
docs/AI_Native_Test_Platform_PRD/: BRD.md  L0_PRD.md  PRD.md  Qoder_Agent扩展机制设计.md  QualityAI_架构设计.drawio  测试脚本生成器_实现设计.md  测试脚本生成器_技能规范.md
docs/AI_Native_Test_Platform_PRD/L1/: L1-01_CLI_Test_Agent.md  L1-02_Test_Case_Management.md  L1-03_UI_Automation.md  L1-04_API_Automation.md  L1-05_Execution_Engine.md  L1-06_Bug_Management.md  L1-07_Knowledge_Base.md  L1-08_Platform_Portal.md
docs/requirement/: AI-Quality-Platform-BRD.md  AI-Quality-Platform-PRD.md  QualityAI-Internal-BRD-V4.md
docs/research/: AI_Testing_Platforms_Comparison.md  UI-Automation-Business-Entry-Strategy.md  modern-testing-and-quality-engineering-research.md  quality-engineering-ontology-model.md  quality-engineering-research-report.md  testing-activities-8d-matrix.csv  testing-orthogonal-dimensions.md
src/qoder/: __init__.py
src/qoder/agents/: base.py
src/qoder/agents/script_generator/: __init__.py  agent.py  workflow.py
src/qoder/cli/: app.py  config_commands.py  test_commands.py  test_script_cmd.py
src/qoder/config/: defaults.py  loader.py
src/qoder/kb/: retriever.py
src/qoder/llm/: provider.py
src/qoder/models/: case_models.py
src/qoder/parsers/: markdown_parser.py
src/qoder/templates/: __init__.py
src/qoder/validators/: antipattern_checker.py  structure_validator.py  syntax_validator.py
tests/unit/: test_config_loader.py  test_markdown_parser.py  test_structure_validator.py  test_syntax_validator.py
(+11 files in other folders)
